# InitCMake

./: .gitignore  .hgignore  BuildLibraryCommon.cmake  CheckDefaultDeclarations.cmake  CheckNullPtr.cmake  CheckOverride.cmake  CheckStaticAssert.cmake  ConfigDirectory.cmake  ConfigModule.cmake  ConfigTarget.cmake  DefaultBuildOptions.cmake  DefaultCompileOptions.cmake  EnableCxx11.cmake  GenConfigFiles.m4  Makefile.am  README.md
BuildCommon/: BuildLib.cmake  ConfigModule.cmake  ConfigTarget.cmake  Makefile.am
Checks/: EnableCxx11.cmake  Makefile.am  RightValueReference.cmake
Modules/: FindCppUnit.cmake
