
##
##    List of Directories.
##

SUBDIRS         =  .  Checks  Packages
DIST_SUBDIRS    =  $(SUBDIRS)

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    ConfigDirectory.cmake           \
    DefaultCompileOptions.cmake     \
    TargetSystem.cmake              \
    ${extra_noinst_data_files}
