
##
##    List of Directories.
##

##
##    List of Installs.
##

dist_noinst_DATA    =  \
    ConstExpr.cmake             \
    DefaultDeclarations.cmake   \
    EnableCxx11.cmake           \
    NullPtr.cmake               \
    Override.cmake              \
    RightValueReference.cmake   \
    StaticAssert.cmake          \
    ${extra_noinst_data_files}
